// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="source-viewer-measures"
>
  <div
    className="source-viewer-measures-section source-viewer-measures-section-big"
  >
    <div
      className="source-viewer-measures-card source-viewer-measures-card-fixed-height js-test-list"
    >
      <div
        className="measures"
      >
        <table
          className="source-viewer-tests-list"
        >
          <tbody>
            <tr>
              <td
                className="source-viewer-test-status note"
                colSpan={3}
              >
                component_viewer.measure_section.unit_tests
                <br />
                <span
                  className="spacer-right"
                >
                  component_viewer.tests.ordered_by
                </span>
                <a
                  className="js-sort-tests-by-duration"
                  data-sort="duration"
                  href="#"
                  onClick={[Function]}
                >
                  component_viewer.tests.duration
                </a>
                <span
                  className="slash-separator"
                />
                <a
                  className="js-sort-tests-by-name active-link"
                  data-sort="name"
                  href="#"
                  onClick={[Function]}
                >
                  component_viewer.tests.test_name
                </a>
                <span
                  className="slash-separator"
                />
                <a
                  className="js-sort-tests-by-status"
                  data-sort="status"
                  href="#"
                  onClick={[Function]}
                >
                  component_viewer.tests.status
                </a>
              </td>
              <td
                className="source-viewer-test-covered-lines note"
              >
                component_viewer.covered_lines
              </td>
            </tr>
            <MeasuresOverlayTestCase
              key="AWGub2mFGZxsAttCZwQx"
              onClick={[Function]}
              testCase={
                Object {
                  "coveredLines": 3,
                  "durationInMs": 8,
                  "fileKey": "test:fake-project-for-tests:src/test/java/bar/SimplestTest.java",
                  "fileName": "src/test/java/bar/SimplestTest.java",
                  "id": "AWGub2mFGZxsAttCZwQx",
                  "name": "testAdd",
                  "status": "OK",
                }
              }
            />
            <MeasuresOverlayTestCase
              key="AWGub2mGGZxsAttCZwQz"
              onClick={[Function]}
              testCase={
                Object {
                  "coveredLines": 3,
                  "durationInMs": 2,
                  "fileKey": "test:fake-project-for-tests:src/test/java/bar/SimplestTest.java",
                  "fileName": "src/test/java/bar/SimplestTest.java",
                  "id": "AWGub2mGGZxsAttCZwQz",
                  "name": "testAdd_InError",
                  "status": "ERROR",
                }
              }
            />
            <MeasuresOverlayTestCase
              key="AWGub2mGGZxsAttCZwQy"
              onClick={[Function]}
              testCase={
                Object {
                  "coveredLines": 3,
                  "durationInMs": 6,
                  "fileKey": "test:fake-project-for-tests:src/test/java/bar/SimplestTest.java",
                  "fileName": "src/test/java/bar/SimplestTest.java",
                  "id": "AWGub2mGGZxsAttCZwQy",
                  "message": "expected:<9> but was:<2>",
                  "name": "testAdd_WhichFails",
                  "stacktrace": "java.lang.AssertionError: expected:<9> but was:<2>
	at org.junit.Assert.fail(Assert.java:93)
	at org.junit.Assert.failNotEquals(Assert.java:647)",
                  "status": "FAILURE",
                }
              }
            />
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render 2`] = `
<div
  className="source-viewer-measures"
>
  <div
    className="source-viewer-measures-section source-viewer-measures-section-big"
  >
    <div
      className="source-viewer-measures-card source-viewer-measures-card-fixed-height js-test-list"
    >
      <div
        className="measures"
      >
        <table
          className="source-viewer-tests-list"
        >
          <tbody>
            <tr>
              <td
                className="source-viewer-test-status note"
                colSpan={3}
              >
                component_viewer.measure_section.unit_tests
                <br />
                <span
                  className="spacer-right"
                >
                  component_viewer.tests.ordered_by
                </span>
                <a
                  className="js-sort-tests-by-duration active-link"
                  data-sort="duration"
                  href="#"
                  onClick={[Function]}
                >
                  component_viewer.tests.duration
                </a>
                <span
                  className="slash-separator"
                />
                <a
                  className="js-sort-tests-by-name"
                  data-sort="name"
                  href="#"
                  onClick={[Function]}
                >
                  component_viewer.tests.test_name
                </a>
                <span
                  className="slash-separator"
                />
                <a
                  className="js-sort-tests-by-status"
                  data-sort="status"
                  href="#"
                  onClick={[Function]}
                >
                  component_viewer.tests.status
                </a>
              </td>
              <td
                className="source-viewer-test-covered-lines note"
              >
                component_viewer.covered_lines
              </td>
            </tr>
            <MeasuresOverlayTestCase
              key="AWGub2mGGZxsAttCZwQz"
              onClick={[Function]}
              testCase={
                Object {
                  "coveredLines": 3,
                  "durationInMs": 2,
                  "fileKey": "test:fake-project-for-tests:src/test/java/bar/SimplestTest.java",
                  "fileName": "src/test/java/bar/SimplestTest.java",
                  "id": "AWGub2mGGZxsAttCZwQz",
                  "name": "testAdd_InError",
                  "status": "ERROR",
                }
              }
            />
            <MeasuresOverlayTestCase
              key="AWGub2mGGZxsAttCZwQy"
              onClick={[Function]}
              testCase={
                Object {
                  "coveredLines": 3,
                  "durationInMs": 6,
                  "fileKey": "test:fake-project-for-tests:src/test/java/bar/SimplestTest.java",
                  "fileName": "src/test/java/bar/SimplestTest.java",
                  "id": "AWGub2mGGZxsAttCZwQy",
                  "message": "expected:<9> but was:<2>",
                  "name": "testAdd_WhichFails",
                  "stacktrace": "java.lang.AssertionError: expected:<9> but was:<2>
	at org.junit.Assert.fail(Assert.java:93)
	at org.junit.Assert.failNotEquals(Assert.java:647)",
                  "status": "FAILURE",
                }
              }
            />
            <MeasuresOverlayTestCase
              key="AWGub2mFGZxsAttCZwQx"
              onClick={[Function]}
              testCase={
                Object {
                  "coveredLines": 3,
                  "durationInMs": 8,
                  "fileKey": "test:fake-project-for-tests:src/test/java/bar/SimplestTest.java",
                  "fileName": "src/test/java/bar/SimplestTest.java",
                  "id": "AWGub2mFGZxsAttCZwQx",
                  "name": "testAdd",
                  "status": "OK",
                }
              }
            />
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
